--- a/BombermanWeb/src/main/resources/static/templates/consultationCompte.html
+++ b/BombermanWeb/src/main/resources/static/templates/consultationCompte.html
@@ -8,7 +8,7 @@
 <script
         src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<link href="./css/connect.css" rel="stylesheet">
+<link href="../css/connect.css" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Bomberman Compte</title>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="form-group">
                             <label class="text-info" for="mail">Mail:</label> <input
-                                class="form-control" id="mail" name="mail" type="email" th:value="${user.getEmail()}" >
+                                class="form-control" id="mail" name="mail" th:value="${user.getEmail()}" type="email">
                         </div>
                         <div class="form-group">
                             <br> <input class="btn btn-info btn-md" name="action"
