--- a/BombermanWeb/src/main/resources/static/templates/connect.html
+++ b/BombermanWeb/src/main/resources/static/templates/connect.html
@@ -8,47 +8,40 @@
 <script
         src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<link href="./css/connect.css" rel="stylesheet">
+<link href="../css/connect.css" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
-    <title>Bomberman creation compte</title>
+    <title>Bomberman Connexion</title>
 </head>
 <body>
-<div id="register">
+<div id="login">
     <div class="container">
         <div class="row justify-content-center align-items-center" id="login-row">
             <div class="col-md-6" id="login-column">
                 <div class="col-md-12" id="login-box">
-                    <form action="/bomberman/registernew" class="form" id="register-form" method="post">
-                        </br>
-                        </br>
-                        </br>
-                        <h3 class="text-center text-info">Création de compte :</h3>
-                        </br>
-                        </br>
-                        </br>
+                    <form action="/bomberman/login" class="form" id="login-form" method="post">
+
+                        <h3 class="text-center text-info">Connection au compte de jeu:</h3>
+
                         <div class="alert alert-danger" role="alert" th:if="${msg_error}" th:utext="${msg_error}"></div>
                         <div class="alert alert-success" role="alert" th:if="${msg_success}"
                              th:utext="${msg_success}"></div>
+
                         <div class="form-group">
-                            <label class="text-info" for="username">Username:</label>
+                            <label class="text-info" for="username">Username:</label><br>
                             <input class="form-control" id="username" name="username" type="text">
                         </div>
                         <div class="form-group">
-                            <label class="text-info" for="password">Password:</label>
+                            <label class="text-info" for="password">Password:</label><br>
                             <input class="form-control" id="password" name="password" type="password">
                         </div>
                         <div class="form-group">
-                            <label class="text-info" for="mail">Mail:</label>
-                            <input class="form-control" id="mail" name="mail" type="email">
-                        </div>
-                        <div class="form-group">
                             <br>
-                            <input class="btn btn-info btn-md" name="submit" type="submit" value="Valider">
+                            <input class="btn btn-info btn-md" name="submit" type="submit" value="Connexion">
                         </div>
                         <div class="text-right" id="register-link">
-                            <a class="text-info" href="/bomberman/connection">Connexion
-                                ?</a>
+                            <a class="text-info" href="/bomberman/register">Pas de
+                                compte ?</a>
                         </div>
                     </form>
                 </div>
@@ -57,4 +50,5 @@
     </div>
 </div>
 </body>
+
 </html>
